# ML-Course

./: LICENSE.txt  README.md  conda-environment.yaml  setup.cfg
mlcourse/: config.py
mlcourse/cats_vs_dogs/: download_data.py  pretrained.py  train_model.py
mlcourse/data/: .gitignore
mlcourse/mnist/: fashion.py  lucky7.py  numpy_mnist.py
mlcourse/model_server/: __main__.py
notebooks/: Cats vs Dogs Code Along.ipynb  Lucky 7 Code Along.ipynb  MNIST Code Along.ipynb  NumPy Code Along.ipynb  cats_vs_dogs.ipynb  cats_vs_dogs.py  nb010_welcome.ipynb  nb010_welcome.py  nb020_welcome_mnist_example.ipynb  nb020_welcome_mnist_example.py  nb020_what_is_ml.ipynb  nb020_what_is_ml.py  nb030_solution_fashion_mnist.ipynb  nb030_solution_fashion_mnist.py  nb030_workshop_fashion_mnist.ipynb  nb030_workshop_fashion_mnist.py  nb040_installation_on_linux.ipynb  nb040_installation_on_linux.py  nb050_numpy.ipynb  nb050_numpy.py  nb050x_workshop_numpy.ipynb  nb050x_workshop_numpy.py  nb050z_solution_numpy.ipynb  nb050z_solution_numpy.py  nb060_pandas_series.ipynb  nb060_pandas_series.py  nb062_pandas_dataframes_1.ipynb  nb062_pandas_dataframes_1.py  nb064_pandas_dataframes_2.ipynb  nb064_pandas_dataframes_2.py  nb066x_workshop_pandas.ipynb  nb066x_workshop_pandas.py  nb068_pandas_visualization.ipynb  nb068_pandas_visualization.py  nb070_intro_to_evaluation.ipynb  nb070_intro_to_evaluation.py  nb072_regression.ipynb  nb072_regression.py  nb074_ensembles.ipynb  nb074_ensembles.py  (+24 more)
slides/: 010-machine-learning.pptx  050-basics.pptx
workshops/: w060_numpy.py  w064_broadcasting.py
(+25 files in other folders)
