[metadata]
name = mlcourse
version = 0.1.0
author = Dr. Matthias Hölzl
author_email = tc@xantira.com
description = Python sources for some of my machine learning courses
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hoelzl/ml-course
project_urls =
    Bug Tracker = https://github.com/hoelzl/ml-course
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    typer>=0.4.0
    fastapi>=0.72.0

[options.entry_points]
console_scripts:
    mlcourse_model_server = mlcourse.model_server.__main__:run_server

[options.package_data]
data = external/*, raw/*